# slimDNS

./: .gitignore  LICENSE  README.md  __init__.py  config.py  dnstool.py  pyproject.toml  records.json  setup.py  slimDNS.py
docs/: conf.py  index.rst
docs/programming_guide/: configuration.rst  installation.rst
docs/record_types/: A.rst  MX.rst  NS.rst  SOA.rst  SRV.rst
docs/slimDNS/: ADDITIONAL.rst  ANSWER.rst  DNS_RESPONSE.rst  Events.rst  QUERY.rst  TCP_SERVER.rst  UDP_SERVER.rst  server.rst
examples/: minimal.py
slimDNS/: __init__.py  __main__.py  argparsing.py  dns.py  helpers.py  logger.py  orchistration.py  session.py  types.py
slimDNS/lib/: abstracts.py  data.py  events.py  exceptions.py  identities.py  servers.py  session.py  utilities.py
slimDNS/workers/: sockets.py  worker.py
