[build-system]
requires = ["setuptools>=67.5"]
build-backend = "setuptools.build_meta"

[project]
name = "slimDNS"
dynamic = ["version", "entry-points"]
description = "A no-dependency DNS server written in vanilla Python."
authors = [
    {name = "Anton Hvornum", email = "anton@hvornum.se"},
]
license = {text = "AGPL-1.0-or-later"}
readme = "README.md"
requires-python = ">=3.10"

keywords = ["linux", "slimDNS", "DNS", "server"]

classifiers = [
    "Programming Language :: Python :: 3.10",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
Home = "https://slimDNS.archlinux.life"
Documentation = "https://slimDNS.readthedocs.io/"
Source = "https://github.com/Torxed/slimDNS"

[project.optional-dependencies]
doc = ["sphinx"]

[project.scripts]
slimDNS = "slimDNS:run_as_a_module"

[tool.setuptools]
packages = ["slimDNS"]

[tool.setuptools.dynamic]
version = {attr = "slimDNS.__version__"}

[tool.mypy]
python_version = "3.10"
exclude = "tests"

[tool.bandit]
targets = ["slimDNS"]
exclude = ["/tests"]
